chore(ci): optimize docker build caching and layers

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,8 +43,12 @@ jobs:
       - name: Build and push Docker
         uses: docker/build-push-action@v6
         with:
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: |
+            type=gha
+            type=gha,stage=builder
+          cache-to: |
+            type=gha,mode=max,stage=builder
+            type=gha,mode=max
           file: 'Dockerfile'
           platforms: linux/amd64,linux/arm64
           context: ./
