feat: avoid download github files

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,11 +19,11 @@ services:
   comwechat:
     environment:
         - VNCPASS=jiz4oh
-        - COMWECHAT=https://github.com/ljc545w/ComWeChatRobot/releases/download/3.7.0.30-0.1.1-pre/3.7.0.30-0.1.1-pre.zip
     volumes:
         - "./comwechat/Files/:/home/user/.wine/drive_c/users/user/My Documents/WeChat Files/"
         # - "./comwechat/Data/:/home/user/.wine/drive_c/users/user/Application Data/"
         - ./run2.py:/run2.py
+        - ./comwechat.zip:/comwechat.zip
     ports:
       - 5905:5905
     command: /run2.py
@@ -51,11 +51,11 @@ services:
   comwechat2:
     environment:
         - VNCPASS=jiz4oh
-        - COMWECHAT=https://github.com/ljc545w/ComWeChatRobot/releases/download/3.7.0.30-0.1.1-pre/3.7.0.30-0.1.1-pre.zip
     volumes:
         - "./comwechat/efb2/Files/:/home/user/.wine/drive_c/users/user/My Documents/WeChat Files/"
         # - "./comwechat/Data/:/home/user/.wine/drive_c/users/user/Application Data/"
         - ./run2.py:/run2.py
+        - ./comwechat.zip:/comwechat.zip
     ports:
       - 5906:5905
     command: /run2.py
